# orchestrer

./: .gitignore  CMakeLists.txt
include/app/: action_result.hpp  base_gui.hpp  orchestrer_window.hpp  project_manager.hpp
include/app/components/: project_tree.hpp
include/project/: project.hpp  project_data.hpp  scene_component.hpp
include/project/components/: component_factory.hpp  flux_component.hpp  scene_component.hpp
include/ui/: orchestrer_window.hpp
resources/ui/: main_window.ui
src/: img_orchestrer.cpp  main_app.cpp
src/app/: orchestrer_window.cpp  project_manager.cpp
src/app/components/: project_tree.cpp
src/project/: project_data.cpp  scene_component.cpp
src/project/components/: component_factory.cpp  flux_component.cpp  scene_component.cpp
src/ui/: orchestrer_window.cpp  orchestrer_window.hpp
